# transadif

./: .gitignore  BUILDING.md  Cargo.toml  GOALS.md  LICENSE  Makefile  OTHER.md  README.md  build-dist.sh  build-local.sh  build-release.sh  build-simple.sh
.github/workflows/: release.yml
src/: adif.rs  cli.rs  encoding.rs  entities.rs  error.rs  errors.rs  lib.rs  main.rs  mojibake.rs  output.rs  test_runner.rs
test-cases/: 001-in-plain-ascii.adi  001-out-plain-ascii.adi  002-in-plain-iso.adi  002-out-plain-iso.adi  003-in-plain-utf.adi  003-out-plain-utf.adi  010-in-undercount.adi  010-out-undercount.adi  011-in-overcount.adi  011-out-overcount.adi  012-in-large-undercount.adi  012-out-large-undercount.adi  013-in-large-overcount.adi  013-out-large-overcount.adi
test-cases/01-plain-examples/: 1-plain-ascii-in.adi  1-plain-ascii-out.adi  2-plain-iso-in.adi  2-plain-iso-in.adi.tmp  2-plain-iso-out.adi  3-plain-utf-in.adi  3-plain-utf-out.adi  4-mojibake-in.adi  4-mojibake-in.adi.tmp  4-mojibake-out.adi  5-nested-mojibake-in.adi  5-nested-mojibake-in.adi.tmp  5-nested-mojibake-out.adi
test-cases/02-field-length/: 1-undercount-in.adi  1-undercount-out.adi  2-overcount-in.adi  2-overcount-out.adi  3-large-undercount-in.adi  3-large-undercount-out.adi  4-large-overcount-in.adi  4-large-overcount-out.adi  5-sneaky-undercount-in.adi  5-sneaky-undercount-out.adi  6-sneakier-undercount-in.adi  6-sneakier-undercount-out.adi
test-cases/03-entities/: 1-iso-with-named-entities-in.adi  1-iso-with-named-entities-in.adi.tmp  1-iso-with-named-entities-out.adi  2-iso-with-code-entities-in.adi  2-iso-with-code-entities-in.adi.tmp  2-iso-with-code-entities-out.adi  3-iso-with-extended-entities-out.adi  3-iso-with-extended-entities.adi  3-iso-with-extended-entities.adi.tmp
