[package]
name = "transadif"
version = "0.1.0"
edition = "2021"
authors = ["Ham2K <ki2d@ham2k.net>"]
description = "A command-line tool to read and process ADIF files with proper encoding handling"
license = "MIT"
repository = "https://github.com/ham2k/transadif"
homepage = "https://github.com/ham2k/transadif"
documentation = "https://github.com/ham2k/transadif"
keywords = ["adif", "amateur-radio", "encoding", "utf8", "mojibake"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
exclude = ["test-cases/", "target/", ".git/"]

[[bin]]
name = "transadif"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
htmlescape = "0.3"
chardetng = "0.1"
encoding_rs = "0.8"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
unicode-normalization = "0.1"
unidecode = "0.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"  # Optimize for size
